// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDate 1`] = `
<p>
  comming soon
</p>
`;

exports[`ProductDate 2`] = `
<p>
  just then
</p>
`;

exports[`ProductDate 3`] = `
<p>
  30 seconds ago
</p>
`;

exports[`ProductDate 4`] = `
<p>
  a minute ago
</p>
`;

exports[`ProductDate 5`] = `
<p>
  30 minutes ago
</p>
`;

exports[`ProductDate 6`] = `
<p>
  1 hour ago
</p>
`;

exports[`ProductDate 7`] = `
<p>
  6 hours ago
</p>
`;

exports[`ProductDate 8`] = `
<p>
  yesterday
</p>
`;

exports[`ProductDate 9`] = `
<p>
  2 days ago
</p>
`;

exports[`ProductDate 10`] = `
<p>
  3 days ago
</p>
`;

exports[`ProductDate 11`] = `
<p>
  10/16/2017
</p>
`;
